Add /find, improve /send, few other tweaks